@@ -2,7 +2,7 @@
 
 <!--
   =======================================================================
-    Apache Ant own build file
+   Apache Ant own build file
 
    Copyright (c) 2000-2002 The Apache Software Foundation.  All rights
    reserved.
@@ -20,7 +20,7 @@
 
   <property name="Name" value="Apache Ant"/>
   <property name="name" value="ant"/>
-  <property name="version" value="1.5.1alpha"/>
+  <property name="version" value="1.5.1beta1"/>
   <property name="manifest-version" value="1.5.0.1"/>
 
   <property name="debug" value="true" />
